--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,7 +4,7 @@
     	<p> Hi, I'm maxweil, I've been on the internet since 2005. Between coding for a living and net-surfing in my leisure time, I'm on the computer a lot. </p>
     <h2> comms </h2>
 		<ul>
-			<li>email: max@maxweil.com</li>
+			<li>email: max❍maxweil.com</li>
 			<li>twitter: @_maxweil</li>
 			<li>twitterbot: @LuckyStarPicBot</li>
 			<li>discord: maxweil#9976</li>
