--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,20 @@
 <body>
-	<div class="icon"><img style="border-radius: 50%" alt="icon" src="static/icons/mefa2.jpg" width="168" height="168"></div>
+	<div class="icon"><img style="border-radius: 50%" alt="icon" src="static/icons/skulsquarebigtrans.png" width="128" height="128"></div>
     <h1> about me</h1>
-    	<p> Hi, I'm maxweil, I've been on the internet since 2005. Between coding for a living and net-surfing in my leisure time, I'm on the computer a lot. </p>
+    	<p> Hi, I'm maxweil, I've been on the internet since 2005. Welcome to my corner of the web. </p>
+		<p> Remember — the 'm' is always lowercase<a href="https://maxweil.com/log/log5">.</a> </p>
+
     <h2> comms </h2>
 		<ul>
 			<li>email: max❍maxweil.com</li>
-			<li>twitter: @_maxweil</li>
-			<li>twitterbot: @LuckyStarPicBot</li>
 			<li>discord: maxweil#9976</li>
-			<li>github: maxweill</li>
-			<li>myanimelist: maxweil</li>
-			<li>myfigurecollection: maxweil</li>
+			<li>twitter: <a href="https://twitter.com/_maxweil">@_maxweil</a></li>
+			<li>twitterbot: <a href="https://twitter.com/LuckyStarPicBot">@LuckyStarPicBot</a></li>
+			<li>itch.io: <a href="https://maxweil.itch.io">maxweil</a></li>
+			<li>github: <a href="https://github.com/maxweill">maxweill</a></li>
+			<li>myanimelist: <a href="https://myanimelist.net/profile/maxweil">maxweil</a></li>
+			<li>myfigurecollection: <a href="https://myfigurecollection.net/profile/maxweil">maxweil</a></li>
 		</ul>
+	<h2> </h2>
 </body>
 
