--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,6 +3,7 @@
 		  <nav>
 			[
 				<a href="/">home</a> |
+				<a href="/works">works</a> |
 				<a href="/log">log</a> |
 				<a href="/photos">photos</a> |
 				<a href="/radio">radio</a>
